--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
     - npm install forever coffee-script -g
     - npm install cozy-controller -g
     - sudo sed -i -e 's/^Defaults\tsecure_path.*$//' /etc/sudoers
-    - sudo forever start -o forever-ds.log /usr/local/lib/node_modules/cozy-controller/bin/cozy-controller
+    - sudo forever start -o forever-ds.log cozy-controller
     - ps aux | grep controller
     - sleep 5
     - cat forever-ds.log
