change travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
         - NODE_ENV=test
 before_install:
     - npm install forever coffee-script -g
-    - npm install cozy-controller -g
-    - locate cozy-controller
+    - npm install cozy-controller
+    - ls
     - sudo sed -i -e 's/^Defaults\tsecure_path.*$//' /etc/sudoers
     - sudo forever start -o forever-ds.log cozy-controller
     - ps aux | grep controller
