--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
     - npm install cozy-controller
     - ls
     - sudo sed -i -e 's/^Defaults\tsecure_path.*$//' /etc/sudoers
-    - sudo forever start -o forever-ds.log cozy-controller
+    - sudo forever start -o forever-ds.log node_modules/cozy-controller/bin/cozy-controller
     - ps aux | grep controller
     - sleep 5
     - cat forever-ds.log
