--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "commander": "2.9.0",
     "cozy-clients": "1.0.5",
     "cozy-notifications-helper": "1.1.0",
+    "cozy-realtime-adapter": "1.0.2",
     "humanize": "0.0.9",
     "lodash.find": "4.3.0",
     "printit": "0.1.19",
